Fix color contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ nav {
 
 .intxt {
   text-decoration: none;
-  color: #6BA244;
+  color: #2C4D6E;
 }
 
 .header-img {
